# hamster

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  hamster_run.cpp  meson.build
data/: appdata.xml.in  com.github.slawtul.hamster.appdata.xml.in  com.github.slawtul.hamster.desktop.in  com.github.slawtul.hamster.gschema.xml  desktop  desktop.in  fakeKey  fakeKey.c  gschema.xml  meson.build  run_hamster.sh
debian/: changelog  control  copyright
hamster_lib/: CMakeLists.txt  Layout.cpp  Layout.h  MainWindow.cpp  MainWindow.h  WindowBody.cpp  WindowBody.h  WindowLayout.cpp  WindowLayout.h  hamster.cpp  hamster.h  hamster_window.cpp  hamster_window.h  stage.cpp  stage.h  window.cpp  window.h
hamster_lib/about_dialog/: AboutDialog.cpp  AboutDialog.h
hamster_lib/item_details_window/: ItemDetailsWindow.cpp  ItemDetailsWindow.h
hamster_lib/preferences_window/: PreferencesWindow.cpp  PreferencesWindow.h
hamster_lib/settings_popover/: SettingsMenuButton.cpp  SettingsMenuButton.h  SettingsPopover.cpp  SettingsPopover.h
hamster_lib/shortcuts_window/: ShortcutsWindow.cpp  ShortcutsWindow.h
hamster_lib/util/log/: LogUtil.cpp
hamster_lib/util/text/: TextUtil.cpp  TextUtil.h
po/: LINGUAS  POTFILES  com.github.slawtul.hamster.pot  de.po  es.po  fr.po  meson.build  no.po  pl.po
src/: hamster_run.cpp
src/ui_lib/: meson.build
src/ui_lib/ui/window/: ItemDetailsWindow.h  MainWindow.cpp  MainWindow.h  PreferencesWindow.cpp  PreferencesWindow.h  WindowBody.cpp  WindowBody.h
src/util_lib/: meson.build
src/util_lib/util/file/: FileUtil.cpp  FileUtil.h
src/util_lib/util/item/: ItemUtil.cpp
src/util_lib/util/log/: LogUtil.h
src/util_lib/util/text/: TextUtil.cpp
src/util_lib/util/ui/: UIUtil.h
test/: CMakeLists.txt  catch.hpp  hamster_tests.cpp
tests/: CMakeLists.txt  hamster_tests.cpp
ui/: CMakeLists.txt
ui/src/ui/: WindowBody.h
ui/src/ui/item_details_window/: ItemDetailsWindow.h
ui/src/ui/window/: ItemDetailsWindow.cpp  MainWindow.cpp  MainWindow.h  PreferencesWindow.cpp  ShortcutsWindow.cpp  WindowBody.cpp  WindowBody.h
util/: CMakeLists.txt
util/src/util/file/: FileUtil.cpp  FileUtil.h
util/src/util/item/: ItemUtil.cpp  ItemUtil.h
util/src/util/log/: LogUtil.cpp  LogUtil.h
util/src/util/text/: TextUtil.h
util/src/util/ui/: UIUtil.cpp  UIUtil.h
