add_library(
    ui
    src/ui/MainWindow.h
    src/ui/MainWindow.cpp
    src/ui/WindowBody.h
    src/ui/WindowBody.cpp
    src/ui/settings_popover/SettingsPopover.h
    src/ui/settings_popover/SettingsPopover.cpp
    src/ui/settings_popover/SettingsMenuButton.h
    src/ui/settings_popover/SettingsMenuButton.cpp
    src/ui/about_dialog/AboutDialog.h
    src/ui/about_dialog/AboutDialog.cpp
    src/ui/shortcuts_window/ShortcutsWindow.h
    src/ui/shortcuts_window/ShortcutsWindow.cpp
    src/ui/preferences_window/PreferencesWindow.h
    src/ui/preferences_window/PreferencesWindow.cpp
    src/ui/item_details_window/ItemDetailsWindow.h
    src/ui/item_details_window/ItemDetailsWindow.cpp
)
include_directories(../util/src)
target_include_directories(ui PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")